--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,13 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+  <!-- <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          
+        </div>
+      </div>
+    </div> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
